[gd_scene load_steps=3 format=3 uid="uid://bk5qgfq61sfy6"]

[ext_resource type="Script" path="res://power_ups/power_up.gd" id="1_78s7p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4j4jn"]
radius = 7.5
height = 60.0

[node name="PowerUp" type="RigidBody2D" groups=["power up"]]
collision_layer = 4
collision_mask = 2
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_78s7p")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.117, 0.117)
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(30, 7.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4j4jn")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(30, 7.5)
scale = Vector2(3, 0.75)

[node name="EffectDuration" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="EffectDuration" to="." method="_on_effect_duration_timeout"]
